--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.framework</groupId>
+        <artifactId>common-framework-parent-boot</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <groupId>com.carrying.code</groupId>
     <artifactId>SimpleSSO</artifactId>
     <packaging>pom</packaging>
@@ -15,5 +20,10 @@
         <module>biz-app-B</module>
     </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
