--- a/sso-server/pom.xml
+++ b/sso-server/pom.xml
@@ -10,6 +10,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sso-server</artifactId>
+    <packaging>jar</packaging>
+    <properties>
+        <tomcat.version>7.0.52</tomcat.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.carrying.code</groupId>
+            <artifactId>sso-client</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
